WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214706
Safari Related Leaked Assertions after Playing YouTube Video
https://bugs.webkit.org/show_bug.cgi?id=214706
Summary
Safari Related Leaked Assertions after Playing YouTube Video
Peng Liu
Reported
2020-07-23 15:14:12 PDT
Safari Related Leaked Assertions after Playing YouTube Video
Attachments
Patch
(2.57 KB, patch)
2020-07-23 16:27 PDT
,
Peng Liu
jer.noble
: review+
Details
Formatted Diff
Diff
Fix a layout test failure on Mac
(2.61 KB, patch)
2020-07-23 20:10 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2020-07-23 15:14:53 PDT
<
rdar://problem/65188100
>
Peng Liu
Comment 2
2020-07-23 16:27:34 PDT
Created
attachment 405094
[details]
Patch
Peng Liu
Comment 3
2020-07-23 20:10:46 PDT
Created
attachment 405121
[details]
Fix a layout test failure on Mac
EWS
Comment 4
2020-07-23 21:48:57 PDT
Committed
r264810
: <
https://trac.webkit.org/changeset/264810
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405121
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug